--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
+    <!-- PWA support -->
+    <link rel="manifest" href="./manifest.json"/>
+    <meta name="theme-color" content="#2F3BA2"/>
+    <meta name="description" content="open chat"/>
     <meta name='viewport' content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0'/>
     <link rel="icon" href="<%= BASE_URL %>favicon.ico"/>
     <title><%= htmlWebpackPlugin.options.title %></title>
